--- a/DemoBlazorWASM/Shared/NavMenu.razor
+++ b/DemoBlazorWASM/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using DemoBlazorWASM.Security
+@using Microsoft.AspNetCore.Components.Authorization
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">DemoBlazorWASM</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -34,6 +36,32 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> JS Interop
             </NavLink>
         </div>
+        <AuthorizeView>
+            <NotAuthorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="register">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Créer un compte
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="login">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Connexion
+                    </NavLink>
+                </div>
+            </NotAuthorized>
+        <Authorized>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="userlist">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Liste des utilisateurs
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="logout">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Déconnexion
+                </NavLink>
+            </div>
+            </Authorized>
+        </AuthorizeView>
     </nav>
 </div>
 
@@ -46,4 +74,6 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
+
+    
 }
