--- a/DemoBlazorWASM/Shared/NavMenu.razor
+++ b/DemoBlazorWASM/Shared/NavMenu.razor
@@ -36,6 +36,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> JS Interop
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="chat">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Mon super Chat
+            </NavLink>
+        </div>
+
         <AuthorizeView>
             <NotAuthorized>
                 <div class="nav-item px-3">
