--- a/DemoBlazorWASM/Shared/NavMenu.razor
+++ b/DemoBlazorWASM/Shared/NavMenu.razor
@@ -42,6 +42,12 @@
             </NavLink>
         </div>
 
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="movies">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Ma vidéothèque
+            </NavLink>
+        </div>
+
         <AuthorizeView>
             <NotAuthorized>
                 <div class="nav-item px-3">
